# eddb

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
docs/: bibliotecas_utilzadas.md
eddb/: db_teste.json  gerenciado_de_biblioteca.py  livros.json  main-test.py  main.py
eddb/book/: book_composer.py  book_controller_concrete.py  book_model.py  book_repository_concrete.py  book_view.py
eddb/book/book_interface/: book_controller.py  book_repository.py  feedback_book_view.py
eddb/components/: menu.py
eddb/controller/: biblioteca_controller.py  concrete_controller.py  icontroller.py
eddb/endview/: end_composer.py  end_view.py
eddb/loan/: loan_composer.py  loan_controller_concrete.py  loan_model.py  loan_repository_concrete.py  loan_view.py
eddb/loan/loan_interface/: feedback_loan_view.py  loan_controller.py  loan_repository.py
eddb/mainmenu/: main_menu_composer.py  main_menu_view.py
eddb/model/: emprestimo.py  livro.py  usuario.py
eddb/repository/: emprestimo_repository.py  irepository.py  livros_repository.py  usuarios_repository.py
eddb/student/: student_composer.py  student_controller_concrete.py  student_model.py  student_repository_concrete.py  student_view.py
eddb/student/student_interface/: feedback_student_view.py  student_controller.py  student_repository.py
eddb/util/: menus.py  themes.py  util.py
eddb/view/: console.py  iview.py  livro_menu_view.py  menu_view.py
tests/: test_livro_repository.py
