[tool.poetry]
name = "eddb"
version = "0.1.0"
description = "Trabalho de Estrutura de Dados - Gerenciamento Bibliotecário"
authors = ["Dante de Araujo <danteeng@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.28.1"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
