[tool.poetry]
name = "eddb"
version = "0.1.0"
description = "Trabalho de Estrutura de Dados - Gerenciamento Bibliotecário"
authors = ["Dante de Araujo <danteeng@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
readchar = "^4.0.5"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"
pytest = "^7.3.2"
black = "^23.3.0"

[tool.pylint.format]
max-line-length = "81"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
